Fixed header spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,7 +23,7 @@ body {
 .headerContent {
   max-width: 64rem;
   margin: 0 auto;
-  padding: 4rem 1rem;
+  padding: 4rem 0rem;
 }
 
 .title {
